--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@prisma/client": "^5.20.0",
+    "nanoid": "^5.0.7",
     "next": "^14.2.0",
     "react": "^18.3.0",
-    "react-dom": "^18.3.0",
-    "@prisma/client": "^5.20.0",
-    "nanoid": "^5.0.7"
+    "react-dom": "^18.3.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
-    "typescript": "^5.5.0",
-    "prisma": "^5.20.0"
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "prisma": "^5.20.0",
+    "tailwindcss": "^4.1.18",
+    "typescript": "^5.5.0"
   }
 }
