--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "jest --verbose",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "postinstall": "prisma generate"
   },
   "dependencies": {
@@ -17,13 +20,18 @@
     "react-dom": "^18.3.0"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.14.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
+    "@types/supertest": "^6.0.3",
     "autoprefixer": "^10.4.23",
+    "jest": "^30.2.0",
     "postcss": "^8.5.6",
     "prisma": "^5.20.0",
+    "supertest": "^7.2.2",
     "tailwindcss": "^3.4.19",
+    "ts-jest": "^29.4.6",
     "typescript": "^5.5.0"
   }
 }
